// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`labels the turn with GPICK 1`] = `
<Turn
  i18n={Object {}}
  t={[Function]}
  tReady={true}
  turn={
    Turn {
      "action": "GLOBAL_PICK",
      "player": "HOST",
    }
  }
  turnNumber={0}
/>
`;

exports[`labels the turn with PICK 1`] = `
<Turn
  i18n={Object {}}
  t={[Function]}
  tReady={true}
  turn={
    Turn {
      "action": "PICK",
      "player": "HOST",
    }
  }
  turnNumber={0}
/>
`;

exports[`labels the turn with xPICK 1`] = `
<Turn
  i18n={Object {}}
  t={[Function]}
  tReady={true}
  turn={
    Turn {
      "action": "HIDDEN_EXCLUSIVE_PICK",
      "player": "HOST",
    }
  }
  turnNumber={0}
/>
`;
